[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Data/Theme/THEME_GarretBold.tres" type="Theme" id=1]
[ext_resource path="res://scenes/GameCode/Menu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Data/Theme/THEME_Garret.tres" type="Theme" id=3]

[sub_resource type="DynamicFontData" id=1]
hinting = 0
font_path = "res://Assets/fonts/Garet-Heavy.woff2"

[sub_resource type="DynamicFont" id=2]
size = 120
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[node name="SettingsMenu" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 3 )

[node name="H1Title" type="Label" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 1920.0
margin_bottom = 309.0
grow_vertical = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.7
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 447.0
margin_right = 1920.0
margin_bottom = 695.0
size_flags_vertical = 2

[node name="ButtonControls" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 80.0
shortcut_in_tooltip = false
text = "Controls"
flat = true

[node name="ButtonAudio" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 1920.0
margin_bottom = 164.0
shortcut_in_tooltip = false
text = "Audio"
flat = true

[node name="ButtonVideo" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 1920.0
margin_bottom = 248.0
shortcut_in_tooltip = false
text = "Video"
flat = true

[node name="ButtonBack" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="visibility_changed" from="." to="." method="_on_SettingsMenu_visibility_changed"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/ButtonControls" to="." method="_on_ButtonControls_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/ButtonAudio" to="." method="_on_ButtonAudio_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/ButtonVideo" to="." method="_on_ButtonVideo_button_up"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
